@@ -1,3 +1,10 @@
+2013-04-12  Pedro Alves  <palves@redhat.com>
+	    Hui Zhu  <hui@codesourcery.com>
+	
+	* breakpoint.c (dprintf_re_set): New.
+	(initialize_breakpoint_ops): Set dprintf_breakpoint_ops re_set
+	to dprintf_re_set.
+
 2013-04-10  Joel Brobecker  <brobecker@adacore.com>
 
 	* solib-darwin.c (darwin_bfd_open): Set the filename of the
